--- a/package.json
+++ b/package.json
@@ -22,11 +22,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/mapped-types": "^0.1.1",
+    "@nestjs/platform-fastify": "^7.6.5",
+    "@nestjs/swagger": "^4.7.9",
+    "@nestjs/typeorm": "^7.1.5",
+    "@nestjsx/crud": "^4.6.2",
+    "@nestjsx/crud-typeorm": "^4.6.2",
+    "class-transformer": "0.3.1",
+    "class-validator": "^0.12.2",
+    "fastify-swagger": "^3.5.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
