--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mapped-types": "^0.1.1",
     "@nestjs/platform-fastify": "^7.6.5",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.7.9",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjsx/crud": "^4.6.2",
@@ -43,6 +44,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
