--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@nestjs/typeorm": "^7.1.5",
     "@nestjsx/crud": "^4.6.2",
     "@nestjsx/crud-typeorm": "^4.6.2",
+    "@types/lodash": "^4.14.167",
     "class-transformer": "0.3.1",
     "class-validator": "^0.12.2",
     "fastify-swagger": "^3.5.0",
+    "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
